# trading-analysis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.grafana  GEMINI.md  README.md  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
.claude/: settings.json
.github/workflows/: ci-cd.yml  production.yaml  terraform.yml
buildspec/: build.yml  deploy.yml  deploy_dagster.yml  deploy_grafana.yml  infra.yml  schema.yml  test.yml
docs/: pnl_consumer_logic.md
docs/superpowers/plans/: 2026-04-15-backfill-job.md  2026-04-15-split-deploy-stage.md  2026-04-16-github-actions-migration.md  2026-04-17-grafana-cloud-migration.md  2026-04-18-aws-cost-reduction.md  2026-04-23-ecs-run-launcher.md  2026-04-26-realtime-streaming.md  2026-04-27-aws-account-migration.md  2026-05-02-pnl-consumer-replace-flink.md  2026-05-02-redpanda-throughput-metrics.md  2026-05-03-dagster-alb-access.md  2026-05-04-pnl-full-recompute-assets.md  2026-05-06-full-assets-3day-recompute.md  2026-05-06-grafana-dynamic-table-resolution.md  2026-05-07-pnl-consumer-crash-alert-and-cold-start-fix.md  2026-05-15-pyflink-pnl-job.md  2026-05-19-repo-reorganization.md  2026-05-26-pnl-consumer-checkpoint.md  2026-05-26-pnl-coverage-audit.md  2026-05-30-audit-pnl-script.md  (+2 more)
flink_job/: Dockerfile  anchor_state.py  ch_lookup.py  pnl_stream_job.py  requirements.txt
flink_pnl/: Dockerfile  clickhouse_sink.py  process_candle.py  requirements.txt  sink_config.py
flink_pnl/flink_pnl/: clickhouse_sink.py  entrypoint.py  pnl_job.py  state.py
flink_pnl/tests/: test_pnl_job.py
infra/schemas/: clickhouse_cloud.sql  streaming_supabase.sql
infra/terraform/: backfill_prices.tf  codepipeline.tf  main.tf  tfplan
libs/: clickhouse_client.py  postgres_client.py
libs/computation/: __init__.py  anchor_state.py  bootstrap.py  candle_lookup.py  checkpoint_store.py  fetch_bars.py  fetch_prices.py  minute_loop.py  pnl_formula.py
libs/tests/: test_audit_rebuild_bt.py  test_checkpoint_store.py  test_clickhouse_client.py  test_computation.py  test_minute_loop.py  test_pnl_formula.py  test_postgres_client.py
local_dagster_home/.telemetry/: id.yaml
local_dagster_home/history/: runs.db
pnl_consumer/: Dockerfile  anchor_state.py  ch_lookup.py  pnl_consumer.py  requirements.txt
schemas/: clickhouse_cloud.sql  clickhouse_shadow.sql
scripts/: audit_pnl.py  backfill_fet_prices_and_prod.py  backfill_prod_missing_strategies.py  backfill_rt_midgap_strategies.py  backfill_rt_missing_strategies.py  backfill_rt_window_gap.py  dagster-local.sh  divergence_alert.py  local_pnl_test.py  patch_dashboards_resolution.py  provision_grafana_alerts.sh  smoke_bt_cum_pnl.py
services/backfill_prices/: Dockerfile
services/dagster/: Dockerfile
services/flink_pnl/: Dockerfile
services/pnl_consumer/: Dockerfile  requirements.txt
services/streaming/: Dockerfile
streaming/: Dockerfile  binance_ws_consumer.py  models.py
tests/: test_audit_pnl.py  test_backfill_job.py  test_binance_backfill_skip.py  test_binance_integration.py  test_divergence_alert.py  test_exchange_price_service.py  test_pnl_compute.py  test_pnl_full_recompute.py  test_pnl_recent_recompute.py  test_pnl_rollup.py
tests/flink_job/: test_anchor_state.py  test_ch_lookup.py  test_pnl_stream_job.py
tests/flink_pnl/: test_process_candle.py  test_sink_config.py  test_state.py
tests/libs/: test_computation.py  test_minute_loop.py  test_pnl_formula.py
tests/pnl_consumer/: test_anchor_state.py  test_ch_lookup.py  test_pnl_consumer.py
tests/streaming/: test_binance_ws_consumer.py  test_models.py  test_streaming_integration.py
trading_dagster/assets/: binance_futures_ohlcv.py  clickhouse_connectivity_check.py  pnl_bt_v2_refresh.py  pnl_prod_v2_refresh.py  pnl_real_trade_v2_refresh.py  pnl_rollup.py  pnl_safety_scan.py  pnl_strategy_v2.py  postgres_cleanup.py
trading_dagster/definitions/: __init__.py
trading_dagster/jobs/: __init__.py  backfill_job.py
trading_dagster/sensors/: automation_sensors.py
trading_dagster/utils/: clickhouse_client.py  exchange_price_service.py  pnl_compute.py
(+81 files in other folders)
