[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis"
version = "0.1.0"
description = "Mini trading analytics pipeline — Binance API → ClickHouse Cloud → Dagster → Grafana"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.11,<2.0",
    "dagster-webserver>=1.11,<2.0",
    "dagster-postgres>=0.25,<1.0",
    "boto3>=1.34",
    "clickhouse-connect>=0.8",
    "requests>=2.31",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.dagster]
module_name = "trading_dagster"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require ClickHouse/S3)",
]
