[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-analysis"
version = "0.1.0"
description = "Mini trading analytics pipeline — Binance API → ClickHouse Cloud → Dagster → Grafana"
requires-python = ">=3.11"
dependencies = [
    "dagster==1.13.2",
    "dagster-webserver==1.13.2",
    "dagster-postgres==0.29.2",
    "dagster-aws>=0.25,<1.0",
    "boto3>=1.34",
    "clickhouse-connect>=0.8",
    "confluent-kafka>=2.4",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "pandas>=2.0",
    "ccxt>=4.2",
    "loguru>=0.7",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers>=4.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require ClickHouse/S3)",
    "streaming_integration: Integration tests (require Docker + Binance network access)",
]
